# notes

./: .gitignore  Cargo.toml  README.md  atom-shortcuts.sh  go.work  go.work.sum  how_to_combine_csv.sh  markdown-syntax.md  my_jupytertheme.sh  python-setup.sh  rotate-video.sh  rustfmt.toml
computers--basics/: CompTIA-A(220-1001).md  CompTIA-A(220-1001).sh  CompTIA-A(220-1002).sh  CompTIA-security.sh  computers(todd-mcleod).md  computers(todd-mcleod).sh
config/: toml.md  yaml.md
config--vscode/: settings.json
css/: background-gradients.scss  materialize-css(traversy).html  scss-basics.scss
db/: redis--basics.md  redis.md  sql-basics.md
db--basics/: elasticsearch--basics.sh  sql--basics.sql
general/: brew-notes.md  make-notes.md  make.md  markdown-basics.md
go/: go.work  go.work.sum
html/: html-basics(udacity).md
html-and-css--basics/: html-basics(traversy).html  html-basics(udacity).md  style--tailwind.html  style-bootstrap4.html  style-css(traversy).html
js/: advanced(Neagoie).js  async.js  basics(MDN).js  eslint-notes.md  nvm-notes.md  one-liners.js  pnpm-notes.md  prettier-notes.md
js--concepts/: async.js  one-liners.js
js--data/: dataframe-js.js  mathjs(expressions).js  mathjs.js  tensorflow-js.js
js--db/: postgres(knex).js  postgres(objection).js  postgres(sequelize)(example).js  postgres(sequelize).js
js--general/: data-structures-and-algorithms(Neagoie).js  js-basics(MDN).js  moment.js  typescript-basics.ts
js--node/: bodybuilder(elastic).js  bull.js  bullmq.js  express-api(mongoose-example).js  express-hbs(example).js  express.js  fastify.js  graphql-basics.js  hapi.js  koa-ejs(example).js  koa.js  kue.js  node-fetch.js  nodejs-api-basics.js  opencv.js  pm2.sh  s3-utils.js  sendgrid.js  sharp.js  socketio.js  twilio.js  yargs.js
js--react/: auth0.js  axios-hooks(example).js  d3-and-react.js  firebase-cra.js  firebase-nextjs.js  formik-and-yup.js  material-ui(components).js  mitt-and-react.js  nextjs.js  react-router-dom.js  styled-components.js  webpack-react.js
js--rn/: rn--basics.js
js--svelte/: svelte--sapper.js
js--testing/: testing--codecept.js  testing--jest.js  testing--mocha.js
js--vanilla/: app -- booklist (es5) (skeleton) (not MVC).html  app -- iterator example (dating app).html  app -- loanCalculator (bootstrap).html  app -- number guess game (skeleton).html  app -- state pattern (bootstrap, prototypes).html  app -- task list (vanilla js and materialize).html  app -- tracalorie (module&state pattern).html  app -- weatherJS (fetch, async, classes, bootswatch, weatherunderground API).html  js -- DOM (udemy).md  js -- callbacks, promises, async await.js  js -- easyHTTP(async await)(ES7).js  js -- easyHTTP(fetch)(ES6).js  js -- object oriented js (prototypes, classes).md  js -- requests (async JS).md
js--vue/: vue--basics.vue  vue--nuxt.vue  vue--vuex-and-vue-router.vue
linux--basics/: linux-bash-scripting.sh  linux-basics.sh  linux-filesystem.sh  linux-network.sh  linux-npm_and_node_commands.sh  linux-ssh.sh  linux-vim.sh  nvidia-digits-setup.sh
linux--devops/: aws-about(2019).sh  aws-basics(2019).sh  certbot.sh  devops-concepts.sh  nginx.sh  orchestration-ansible.sh  orchestration-intro-docker(stephen_grider).sh  (+1 more)
other/reason/basics/: README.md  dune-project  justfile  main.re  reason_basics.opam
py/core/asyncio-notes/: main.py  pyproject.toml
py/data/airflow-notes/: .gitignore  Pipfile  README.md  justfile  main.py  notes.md  pyproject.toml
py/data/airflow-notes/dags/: basic_bash_operator.py  basic_dynamic_task_mapping.py  basic_taskflow_api.py  basic_xcom.py
py/data/cvxpy-notes/: README.md  main.py  pyproject.toml
py/data/duckdb-notes/: main.py  pyproject.toml
py/data/ffmpeg-notes/: .gitignore  Pipfile  README.md  main.py  pyproject.toml
py/data/hugging-face-notes/: main.py  pyproject.toml
py/data/matplotlib-notes/: Pipfile  main.py  pyproject.toml
py/data/numpy-linalg-notes/: .gitignore  Pipfile  README.md  additional_examples.py  main.py  pyproject.toml
py/data/numpy-linalg-notes/data/: EEG_RT_data.mat
py/data/opencv-cv2-notes/: .gitignore  Pipfile  main.py  pyproject.toml
py/data/pandas-notes/: Makefile  Pipfile  main.py  pyproject.toml
py/data/pillow-notes/: Pipfile  main.py  pyproject.toml
py/data/plotly-notes/: Pipfile  main.py  pyproject.toml
py/data/pyspark-notes/: Makefile  Pipfile  README.md  main.py  pyproject.toml
py/data/pyspark-notes/data/input/: ninjas.parquet
py/data/scipy-stats-notes/: README.md  main.py  pyproject.toml
py/data/seaborn-notes/: Pipfile  README.md  main.py  pyproject.toml
py/db/pypika-asyncpg-example-pyformat/: README.md  main.py  pyproject.toml
py/db/pypika-asyncpg-example-pyformat/src/: types.py  utils.py
py/db/pypika-asyncpg-example-pyformat/src/db/pg/: pgdal.py
py/db/pypika-notes/: main.py  pyproject.toml
py/utils-validation/datamodel-code-generator-notes/: README.md  main.py  pyproject.toml
py/utils-validation/pydantic-notes/: main.py  pyproject.toml
py/utils/xml-etree-notes/: justfile  main.py  pyproject.toml
rs/core/common-utils/: Cargo.toml
rs/core/common-utils/src/: main.rs
rs/data/linfa-notes/: Cargo.toml
rs/data/linfa-notes/data/input/: usa-housing-cleaned.csv
rs/data/linfa-notes/src/: main.rs
rs/data/ndarray-notes/: Cargo.toml  Justfile  README.md
rs/data/ndarray-notes/src/: main.rs
rs/data/opencv-notes/: Cargo.toml  Justfile
rs/data/opencv-notes/src/: main.rs
rs/data/polars-notes/: Cargo.toml  Justfile  Makefile
rs/data/polars-notes/src/: main.rs
rs/db/diesel-notes/: Cargo.toml
rs/db/diesel-notes/migrations/: 20210929000336_create_ninjas_jutsus_tables.up.sql
rs/db/diesel-notes/src/: main.rs
rs/db/diesel-notes/src/providers/pg/: mod.rs
rs/db/diesel-notes/src/types/: jutsu.rs  ninja.rs  ninja_jutsu.rs
rs/postgres-notes/: Cargo.toml
rs/postgres-notes/src/: main.rs
rs/postgres-notes/src/providers/: mod.rs
rs/postgres-notes/src/providers/pg/: helpers.rs
wasm-and-native/node-wasm-notes/: Cargo.toml  Justfile  index.ts  package.json
wasm-and-native/node-wasm-notes/src/: lib.rs
(+1261 files in other folders)
