[workspace]

members = [
    "rs/core/basics",
    "rs/core/stdlib",
    "rs/data/polars-notes",
    "rs/db/mongo-notes",
    "rs/db/postgres-notes",
    "rs/db/redis-notes",
    "rs/db/sqlx-notes",
    "rs/testing/unit-testing-notes",
    "rs/utils/chrono-notes",
    "rs/utils/clap-notes",
    "rs/utils/flate2-notes",
    "rs/utils/regex-notes",
    "rs/utils/reqwest-notes",
    "rs/utils/serde-notes",
    "rs/web/actix-example",
    "rs/web/gotham-example",
    "rs/web/iron-example",
    "rs/web/nickel-example",
    "rs/web/rocket-example",
    "rs/web/warp-example",
]
