[package]
name = "postgres-notes"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = { version = "0.19" }
chrono = { version = "0.4", features = ["serde"]}
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.51"
tokio-postgres = { version = "0.7.5", features = ["with-chrono-0_4", "with-uuid-0_8"]}
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
uuid = { version = "0.8.2", features = ["serde"]}
anyhow = "1.0.45"