(lang dune 3.17)

(name reason_basics)

(generate_opam_files true)

(package
 (name reason_basics)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
