[project]
name = 'pyomo-notes'
version = "0.1.0"
requires-python = ">=3.12" # `cvxpy` doesn't work with 3.13 yet
dependencies = [
    "clarabel>=0.9.0",
    "cvxopt>=1.3.2",
    "cvxpy>=1.6.0",
    "ecos>=2.0.14",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyscipopt>=5.2.1", # SCIP
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = ["ruff", "pylint"]

[tool.ruff.lint]
extend-select = [
    "I",
    "W",
    "E",
    "D",
    "UP",
    "B",
    "SIM",
    "F",
    "S",
    "A",
    "C4",
    "ISC",
    "TCH",
    "PTH",
    "PL",
    "PERF",
    "FURB",
    "RUF",
]

[tool.pyright]
typeCheckingMode = "basic"
