[project]
name = 'hf-notes'
version = "0.1.0"
# No torch built for python 3.12 or 3.13 (MacOS Intel)
requires-python = ">=3.11"
dependencies = [
    # Must have numpy/pandas lt 2
    "numpy==1.26.4",
    "pandas==1.5.3",
    "pydantic>=2.9.2",
    # Last torch wheel built is v2.2.2 (MacOS Intel)
    "torch==2.2.2",
    "datasets>=3.1.0",
    "evaluate>=0.4.3",
    "transformers>=4.46.3",
    "diffusers>=0.31.0",
    # Required for "Helsinki-NLP/opus-mt-tc-big-en-es"
    "sentencepiece>=0.2.0",
    # Makes "stable-diffusion" faster
    "accelerate>=1.1.1",
    # Recommended by "transformers/models/marian" warning
    "sacremoses>=0.1.1",
]

[tool.uv]
dev-dependencies = ["ruff", "pylint"]

[tool.ruff.lint]
extend-select = [
    "I",
    "W",
    "E",
    "D",
    "UP",
    "B",
    "SIM",
    "F",
    "S",
    "A",
    "C4",
    "ISC",
    "TCH",
    "PTH",
    "PL",
    "PERF",
    "FURB",
    # "RUF",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pyright]
typeCheckingMode = "basic"
