[project]
name = 'matplotlib-notes'
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "typing-extensions>=4.12.2",
]

tool.uv.dev-dependencies = ["ruff", "pylint"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
typeCheckingMode = "basic"
