[project]
name = 'opencv-notes'
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    # "opencv-contrib-python>=4.10.0.84",
    # "opencv-python>=4.10.0.84",
    "opencv-contrib-python==4.6.0.*",
    "opencv-python==4.6.0.*",         # cv2 >4.7 has issues with DnnSuperResImpl
    "scipy>=1.14.1",
]

[tool.uv]
dev-dependencies = ["ruff", "pylint"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
typeCheckingMode = "basic"
