[project]
name = 'opencv-notes'
version = "0.1.0"
requires-python = "==3.11.4" # ">=3.13"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy==1.25.2",
    "opencv-contrib-python==4.6.0.*",
    "opencv-python==4.6.0.*",         # cv2 >4.7 has issues with DnnSuperResImpl
    "scipy>=1.14.1",
    # "numpy>=2.1.3",
    # "opencv-contrib-python>=4.10.0.84",
    # "opencv-python>=4.10.0.84",
    # "opencv-contrib-python==4.8.0.76",
]

[tool.uv]
dev-dependencies = ["ruff", "pylint"]

[tool.ruff.lint]
extend-select = [
    "I",
    "W",
    "E",
    "D",
    "UP",
    "B",
    "SIM",
    "F",
    "S",
    "A",
    "C4",
    "ISC",
    "TCH",
    "PTH",
    "PL",
    "PERF",
    "FURB",
    # "RUF",
]

[tool.pyright]
typeCheckingMode = "basic"
