[project]
name = 'ffmpeg-notes'
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "kaleido==0.2.0",      # 0.2.1 has issue with MacOS
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scipy>=1.14.1",
    "statsmodels>=0.14.4",
]

[tool.uv]
dev-dependencies = ["ruff", "pylint"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
typeCheckingMode = "basic"
