[project]
name = 'pyspark-notes'
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "findspark>=2.0.1",
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "pyspark>=3.5.3",
    "setuptools>=75.5.0", # pyspark implicitly uses "distutils"
]

[tool.uv]
dev-dependencies = ["ruff", "pylint"]

[tool.ruff.lint]
extend-select = [
    "I",
    "W",
    "E",
    "D",
    "UP",
    "B",
    "SIM",
    "F",
    "S",
    "A",
    "C4",
    "ISC",
    "TCH",
    "PTH",
    "PL",
    "PERF",
    "FURB",
    # "RUF",
]

[tool.pyright]
typeCheckingMode = "basic"
