[project]
name = 'seaborn-notes'
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

tool.uv.dev-dependencies = ["ruff", "pylint"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
typeCheckingMode = "basic"
