[project]
name = 'pypika-notes'
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pypika>=0.48.9",
    "tenacity>=9.0.0",
]

[tool.uv]
dev-dependencies = ["ruff", "pylint"]

[tool.ruff.lint]
extend-select = [
    "I",
    "W",
    "E",
    "D",
    "UP",
    "B",
    "SIM",
    "F",
    "S",
    "A",
    "C4",
    "ISC",
    "TCH",
    "PTH",
    "PL",
    "PERF",
    "FURB",
    "RUF",
]

[tool.pyright]
typeCheckingMode = "basic"
