[project]
name = 'xml-notes'
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.1.1",
    "pydantic>=2.13.4",
    "pydantic-xml>=2.21.0",
]


[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "ruff",
]

[tool.ruff.lint]
extend-select = [
    "I",
    "W",
    "E",
    "D",
    "UP",
    "B",
    "SIM",
    "F",
    "S",
    "A",
    "C4",
    "ISC",
    "TCH",
    "PTH",
    "PL",
    "PERF",
    "FURB",
    # "RUF",
]

[tool.pyright]
typeCheckingMode = "basic"
