[package]
name = "common-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.45"
base64 = "0.13.0"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
futures = "0.3"
rayon = "1.10"
regex = "1.5"
reqwest = { version = "0.11.6", features = ["json"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.44.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
unicode-segmentation = "1.7"
url = "2.5"
imara-diff = "0.1"
similar = "2.7"
heck = "0.5"
glob = "0.3"
camino = "1.1"
rustix = { version = "1.0", features = ["fs"] }
jiff = "0.2"
itertools = "0.14"
pathdiff = "0.2"
num = "0.4.3"
