[package]
name = "ndarray-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.3"
rand = "0.8.5"
ndarray = "0.16.0"
ndarray-stats = "0.6.0"
ndarray-rand = "0.15.0"
openblas-src = "0.10.11"
ndarray-linalg = { git = "https://github.com/rust-ndarray/ndarray-linalg", features = [
    "openblas-system",
] }
# ndarray-linalg = "0.16.0" # Does not work with ndarray 0.16.x

# NOTE:
# Feature `openblas-system` requires local install of openblas.
# `brew install openblas`
