[package]
name = "polars-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.23.0", features = [
    "mode",
    "product",
    "round_series",
    "describe",
    "fmt",
    "serde",
    "json",
    "strings",
    "sort_multiple",
] }
