[package]
name = "diesel-notes"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = [
    "postgres",
    "uuid",
    "chrono",
    "r2d2",
] }
diesel-async = { version = "0.5.0", features = ["postgres", "bb8"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
dotenvy = "0.15"
async-trait = "0.1.81"
anyhow = "1.0.86"
