[package]
name = "diesel-notes"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = [
    "postgres",
    "uuid",
    "chrono",
    "r2d2",
] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
dotenvy = "0.15"
anyhow = "1.0.86"
